# ai-demo-service

./: .env.example  .gitignore  CLEANUP.md  DEPLOYMENT_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  GIT_SETUP.md  LICENSE  MIGRATION_SUMMARY.md  README.md  REFACTOR_PLAN.md  UPLOAD_STEPS.sh
backend/: FRONTEND_IMPROVEMENT_GUIDE.md  FUNCTION_POINTS_IMPROVEMENT.md  INSTALL.md  README.md  REFACTOR_COMPLETE.md  UI_IMPROVEMENT_PLAN.md  pyproject.toml  test_document_understanding.py  test_integration.py  test_quality_assessment.py  view_test_case_results.py  view_understanding_results.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  health.py  knowledge_base.py  modules.py  tasks.py  test_cases.py  upload.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/schemas/: __init__.py  common.py
backend/app/services/: __init__.py  knowledge_base_service.py  test_case_service.py
backend/app/utils/: __init__.py
backend/core/: __init__.py  logger.py
backend/domain/: __init__.py
backend/domain/knowledge_base/: __init__.py  rag.py  service.py
backend/domain/task/: __init__.py  manager.py
backend/domain/test_case/: __init__.py  content_extractor.py  document_understanding.py  extractors.py  heuristic_extractor.py  json_parser.py  module_hierarchy.py  module_hierarchy_builder.py  module_matcher.py  module_validator.py  prompts.py  service.py  test_case_generator.py  validators.py  (+1 more)
backend/infrastructure/: __init__.py
backend/models/: __init__.py  schemas.py
backend/shared/: __init__.py  config.py  debug_recorder.py
(+58 files in other folders)
